chore refactor some ddd stuff, fix security configuration